gcc/testsuite/rust/rustc/ui/parser/mismatched-braces/missing-close-brace-in-impl-trait.rs
fn main() {}

impl T for () { // { dg-error ".E0405." "" { target *-*-* } }

fn foo(&self) {}

trait T { // { dg-error "" "" { target *-*-* } }
    fn foo(&self);
}

pub(crate) struct Bar<T>(); // { dg-error "" "" { target *-*-* } }

// { dg-error "" "" { target *-*-* } }

